mndstylemobile.css
/* Feel free to use and repurpose my code, as long as you credit me and/or link to my github page
   Written by justin keena, https://github.com/jwkeena/Magi-Nation-Booster-Pack-Simulator */

.topBar {
    background: rgb(172, 154, 68);
    padding: 10px;
    color: indigo;
    overflow: auto;
}

.topBarMiddle {
    float: center;
}

#topBarMiddle {
    float: center;
}

.bottomBar {
    background: rgb(172, 154, 68);
    padding: 10px;
    color: indigo;
    overflow: auto;
}

#rarity4 {
    position: absolute;
    width: 18px;
    height: 15px;
    top: -30px;
    left: 202.5px;
}

#rarity1, #rarity2, #rarity3 {
    position: absolute;
    width: 36px;
    height: 15px;
    top: -30px;
    left: 198px;
}

#rarity5, #rarity6, #rarity7, #rarity8, #rarity9, #rarity10, #rarity11 {
    position: absolute;
    width: 54px;
    height: 25px;
    top: -30px;
    left: 193.5px;
}

body {
    background-color: black;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 25px;
    color:rgb(172, 154, 68);
}

a:visited, a:link, a:active, a:hover {
    color: indigo;
}

#button1, #button6 {
    background-color: rgb(172, 154, 68);
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 35px;
    font-weight: bold;
    color: indigo;
    padding: 10px 62px 10px 67px;
}

#button2, #button7 {
    background-color: rgb(172, 154, 68);
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 35px;
    font-weight: bold;
    color: indigo;
    padding: 10px 67px 10px 72px;
}

 #button3, #button8 {
    background-color: rgb(172, 154, 68);
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 35px;
    font-weight: bold;
    color: indigo;
    padding: 10px 107px 10px 105px;
}

#button4, #button9 {
    background-color: rgb(172, 154, 68);
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 35px;
    font-weight: bold;
    color: indigo;
    padding: 10px 107px 10px 109px;
}

#button5, #button10 {
    background-color: rgb(172, 154, 68);
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 35px;
    font-weight: bold;
    color: indigo;
    padding: 10px 90px 10px 92px;
}

.boxed {
    display: inline-block;
    border: 5px solid rgb(172, 154, 68);
    border-radius: 5px;
    padding: 0px 5px 0px 5px;
}

.pack img {
    width: 315px;
    height: 450px;
}


/* Style common to all cards, adapted from https://jsfiddle.net/pbnz43gf/ */
    /* Ensures the back of the card is flipped to the front, not just inverted*/
    .pack .back, .card1 .back1, .card2 .back2, .card3 .back3, .card4 .back4, .card5 .back5, .card6 .back6, .card7 .back7, .card8 .back8, .card9 .back9, .card10 .back10, .card11 .back11 {
        -webkit-transform: rotateY( 180deg );
        -moz-transform: rotateY( 180deg );
        -o-transform: rotateY( 180deg );
        transform: rotateY( 180deg );
    }

    .pack.flipped, .card1.flipped, .card2.flipped, .card3.flipped, .card4.flipped, .card5.flipped, .card6.flipped, .card7.flipped, .card8.flipped, .card9.flipped, .card10.flipped, .card11.flipped {
        -webkit-transform: rotateY( 180deg );
        -moz-transform: rotateY( 180deg );
        -o-transform: rotateY( 180deg );
        transform: rotateY( 180deg );
    }

    .pack, .card1, .card2, .card3, .card4, .card5, .card6, .card7, .card8, .card9, .card10, .card11, .card12 {
        display: inline-block; /*puts all cards in a row. This is the big fix I was looking for, suggested by https://codepen.io/roppazvan/pen/EZVLEy*/
        padding-left: 0px; /* prevents cards from being stacked on top of each other*/
        padding-right: 430px; /*same*/
        -webkit-transition: -webkit-transform .5s;
        -moz-transition: -moz-transform .5s;
        -o-transition: -o-transform .5s;
        transition: transform .5s;
        -webkit-transform-style: preserve-3d;
        -moz-transform-style: preserve-3d;
        -o-transform-style: preserve-3d;
        transform-style: preserve-3d;
        -webkit-transform-origin: 50% 50%;
        -moz-transform-origin: 50% 50%; 
        -o-transform-origin: 50% 50%;
        transform-origin: 50% 50%;
    }

    .pack div, .card1 div, .card2 div, .card3 div, .card4 div, .card5 div, .card6 div, .card7 div, .card8 div, .card9 div, .card10 div, .card11 div {
        position: absolute; /* This keeps the front behind the back*/
        -webkit-backface-visibility: hidden;
        -moz-backface-visibility: hidden;
        -o-backface-visibility: hidden;
        backface-visibility: hidden;
 
    }

.row img {
    border-radius: 20px;
    width: 420px;
    height: 565px;
}
/*End of style common to all cards*/

/*Rainbow effect, adapted from https://gist.github.com/ajaegers/52a82619cc191f898ec4*/
@keyframes rainbow {
    from {
        filter: hue-rotate(0deg);
        -webkit-filter: hue-rotate(0deg);
        -moz-filter: hue-rotate(0deg);
        -o-filter: hue-rotate(0deg);
    }
    to {
        filter: hue-rotate(360deg);
        -webkit-filter: hue-rotate(360deg);
        -moz-filter: hue-rotate(360deg);
        -o-filter: hue-rotate(360deg);
    }
}

.holographic {
    animation: rainbow 2s steps(36) infinite;
    -webkit-animation: rainbow 2s steps(36) infinite;
    -moz-animation: rainbow 2s steps(36) infinite;
    -o-animation: rainbow 2s steps(36) infinite;
}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 25px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
}

/* Modal Content (Image) */
.modal-content {
    margin: auto;
    height: 100%; 
    display: block;
    border-radius: 20px;
}

/* Add Animation - Zoom in the Modal */
.modal-content, #caption { 
    animation-name: zoom;
    animation-duration: 0.6s;
}
  
@keyframes zoom {
from {transform:scale(0)} 
to {transform:scale(1)}
}

/* The Close Button */
.close {
    color: #f1f1f1;
    font-size: 200px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

/*Style common to dropup and dropdown buttons*/
.dropdown, .dropup {
    position: relative;
    display: inline-block;
}

.dropdown:hover .dropdown-content, .dropup:hover .dropup-content {
    display: block;
}

.dropdown-content a, .dropup-content a {
    color: indigo;
    display: block;
    text-decoration: none;
}

.dropdown-content a:hover, .dropup-content a:hover {
    background-color: rgb(161, 47, 36);
}

/*Style that differentiates the dropdown and dropup buttons */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: rgb(172, 154, 68);
    width: 100%;
    overflow: auto;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;

}

.dropup-content {
    display: none;
    position: absolute;
    bottom: 45px; /*This is the one line of code that differentiates the two elements*/
    background-color: rgb(172, 154, 68);
    width: 100%;
    overflow: auto;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

